# LLM_BookExpert

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
bot/: llm.py  main.py  memory.py  pyproject.toml
bot/service/: duckduck_search.py  googlebooks.py  livelib.py  sberbank.py
database/: data.py
llm/: agent_llm.py  agent_sberbank.py
middleware/: check_is_group.py
service/: duckduck_search.py  googlebooks.py  sberbank.py
